Step 3: Added header HTML structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>YouTube Clone</title>
 </head>
 <body>
+    <header class="header">
+        <div class="header-left">
+            <button class="menu-btn">≡</button>
+            <div class="logo">
+                <span class="logo-icon">▶</span>
+                <span class="logo-text">YouTube</span>
+            </div>
+        </div>
+        <div class="header-center">
+            <input type="text" placeholder="Поиск" class="serch-input" />
+            <button class="search-btn">🔎</button>
+        </div>
+        <div class="header-right">
+            <button>➕</button>
+            <button>🔔</button>
+            <img src="https://placehold.ru/32" alt="Avatar" class="avatar" />
+        </div>
+    </header>
     <h1>YouTube-clone</h1>
 </body>
 </html>
